--- a/src/chart.xhtml
+++ b/src/chart.xhtml
@@ -193,13 +193,16 @@
 			var yrange = {from: -10, to: 10};
 
 			function draw() {
-				var ha = axis({from: -100, to: 100, numMajorTicks: 10, numMinorTicks: 5});
+				//var ha = axis({from: -1, to: 1, numMajorTicks: 10, numMinorTicks: 5});
+				var ha = axis({categories: ['jan', 'feb', 'mar', 'apr', 'june', 'july', 'aug', 'sep', 'oct', 'nov', 'dec']});
 				var va = axis({from: 0, to: 10, numMajorTicks: 10, numMinorTicks: 5});
 				var g = graphics('canvas-context');
 				var c = canvas(g, {horizontalAxis: ha, verticalAxis: va});
 
 				c.bounds({width: 300, height: 300, x: 50, y: 50});
 				c.drawAxes();
+
+				
 
 /*
 				var g = graphics('canvas-context');
