Fixed some small bugs.

--- a/src/chart.xhtml
+++ b/src/chart.xhtml
@@ -197,11 +197,14 @@
 
 			function draw() {
 				//var ha = axis({from: -10, to: 20, numMajorTicks: 20, numMinorTicks: 3});
-				var ha = axis({categories: ['jan', 'feb', 'mar', 'apr', 'may', 'june', 'july']});
-				var va = axis({from: -1400 , to: 10000, numMajorTicks: 16, numMinorTicks: 0});
+				var ha = axis({categories: ['jan', 'feb', 'mar', 2000, 'apr', 'may', 'june', 'july']});
+				var va = axis({from: -1400 , to: 10000, numMajorTicks: 10, numMinorTicks: 0});
 				//var va = axis({categories: ['jan', 'feb', 'mar', 'apr']});
 
 				var ch = chart('canvas-context', ha, va, 'Sales 2008', 'Monthly average');
+
+
+				console.log(ha);
 
 				//console.log(ch.preferredSize());
 				ch.bounds(ch.preferredSize());
