Did some testing for drawing of crisp lines. Likely solution found.

--- a/src/chart.xhtml
+++ b/src/chart.xhtml
@@ -204,7 +204,7 @@
 				var ch = chart('canvas-context', ha, va, 'Sales 2008', 'Monthly average');
 
 
-				console.log(ha);
+				//console.log(ha);
 
 				//console.log(ch.preferredSize());
 				ch.bounds(ch.preferredSize());
