--- a/src/chart.xhtml
+++ b/src/chart.xhtml
@@ -197,18 +197,18 @@
 
 				var ha = axis({from: 0, to: 10, ticks: {major: 20, minor: 0}, label: 'Ranking'});
 				var ha = axis({categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'June', 'July'], label: 'Months in 2008'});
-				var va = axis({from: -1400 , to: 10000, label: 'USD($)', ticks: {major: 10, minor: 0}});
+				var va = axis({from: 0 , to: 10000, label: 'USD($)', ticks: {major: 5, minor: 0}});
 				//var va = axis({categories: ['jan', 'feb', 'mar', 'apr'], label: 'Months in 2008'});
 
 				var pa = axis({from: -Math.PI, to: Math.PI, ticks: {major: 8}, label: 'hello'});
 
 				var ch = chart(g, {/*polar: pa,*/ horizontal: ha, vertical: va}, 'Sales 2008', 'Monthly average');
 
-				ch.bounds(ch.minimumSize());
-				ch.bounds({x: 20, y: 20});
+				ch.bounds(ch.preferredSize());
+				ch.bounds({x: 10, y: 10});
 				ch.doLayout();
 				ch.draw();
-
+/*
 				console.log(ch.insets());
 
 				var ha1 = axis({from: 0, to: 20000, ticks: {major: 5}});
@@ -217,10 +217,11 @@
 				var ch1 = chart(g, {horizontal: ha1, vertical: va1}, 'Sales 2008', 'per department');
 
 
-				ch1.bounds(ch1.minimumSize());
+				ch1.bounds(ch1.preferredSize());
 				ch1.bounds({x: 20, y: 320});
 				ch1.doLayout();
 				ch1.draw();
+*/
 			}
 		]]>
 		</script>
