--- a/src/column-selectors-1.3.xhtml
+++ b/src/column-selectors-1.3.xhtml
@@ -5,7 +5,7 @@
 	<head>
 		<title>My Test Page</title>
 		<meta http-equiv="Content-Type" content="text/xhtml; charset=utf-8" />
-		<script type="text/javascript" src="../lib/jquery.js"></script>
+		<script type="text/javascript" src="../lib/jquery-1.3.1.js"></script>
 		<script type="text/javascript">
 	
 			$(document).ready(function () {
