--- a/src/chart.xhtml
+++ b/src/chart.xhtml
@@ -196,19 +196,21 @@
 			function draw() {
 				var g = graphics('canvas-context');
 
-				var ha = axis({from: 0, to: 10, ticks: {major: 20, minor: 0}, label: 'Ranking'});
+				var ha = axis({from: -3, to: 8.5, ticks: {major: 10, minor: 0}, label: 'Ranking'});
 				var ha = axis({categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'June', 'July'], label: 'Months in 2008'});
-				var va = axis({from: -1400 , to: 10000, label: 'USD($)', ticks: {major: 8, minor: 0}});
+				var va = axis({from: -1400 , to: 9720, label: 'USD($)', ticks: {major: 10, minor: 0}});
 				//var va = axis({categories: ['jan', 'feb', 'mar', 'apr'], label: 'Months in 2008'});
 
 				var pa = axis({from: -Math.PI, to: Math.PI, ticks: {major: 8}, label: 'hello'});
 
-				var ch = chart(g, {/*polar: pa,*/ horizontal: ha, vertical: va}, 'Sales 2008', 'Monthly average');
+				console.log(va);
+
+				var ch = chart({/*polar: pa,*/ horizontal: ha, vertical: va}, 'Sales 2008', 'Monthly average');
 
 				ch.bounds(ch.preferredSize());
 				//ch.bounds({x: 10, y: 10});
 				ch.doLayout();
-				ch.draw();
+				ch.draw(g);
 /*
 				console.log(ch.insets());
 
