added some draft of documentation.

--- a/src/chart.xhtml
+++ b/src/chart.xhtml
@@ -187,11 +187,11 @@
 
 			function scatter() {
 				anscombe();
-			//	challenger();
+				challenger();
 			}
 
 			function line() {
-			//	linesales();
+				linesales();
 				linesdepartments();
 			}
 
@@ -247,14 +247,12 @@
 		<div class="left">
 			<canvas id="scatter-anscombe" width="350" height="200"></canvas>
 		</div>
-<!--
 		<div class="right">
 			<canvas id="scatter-challenger" width="300" height="200"></canvas>
 		</div>
 		<div class="left">
 			<canvas id="line-sales" width="350" height="200"></canvas>
 		</div>
--->
 		<div class="right">
 			<canvas id="line-departments" width="450" height="200"></canvas>
 		</div>
